--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <h1 class="text-3xl font-bold text-blue-700 mb-8 text-center">Créer un devis</h1>
     <!-- Sélection du client -->
     <label for="client-select" class="block mb-2 text-lg text-blue-700">Sélectionner un client</label>
-    <select id="client-select" class="input-modern w-full p-4 rounded-lg mb-6"></select>
+    <select id="client-select" class="input-modern w-full p-2 md:p-4 rounded-lg mb-6 text-sm md:text-lg"></select>
+
     <!-- Affichage infos client -->
     <div id="client-infos" class="mb-6 hidden rounded-xl p-4 border border-blue-100 bg-white">
       <div class="mb-2"><span class="font-semibold">Nom&nbsp;:</span> <span id="c-nom"></span></div>
